# eu-jobs

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-job-search.yml
config/: config.example.yaml
docs/: terraform-gcp-cloud-run-job.md
src/jobbot/: __main__.py  db.py  models.py  notify.py  packager.py  scoring.py  sheets.py
src/jobbot/sources/: arbeitnow.py  greenhouse.py  lever.py
templates/: cover_letter.md.j2
